crates/ohno_macros_impl/src/derive_error/generate/snapshots/ohno_macros_impl__derive_error__generate__tests__a_message_overrides_the_default.snap
---
source: crates/ohno_macros_impl/src/derive_error/generate/mod/tests.rs
expression: "rendered(&Builder::named(&[\"path\", \"inner\"], 1).message(message).build())"
---
#[automatically_derived]
impl ::core::fmt::Display for MyError {
    fn fmt(&self, f: &mut ::core::fmt::Formatter<'_>) -> ::core::fmt::Result {
        self.inner
            .format_error(
                f,
                "MyError",
                ::core::option::Option::Some(
                    ::std::borrow::Cow::from(
                        ::std::format!("failed for {}", & (self.path)),
                    ),
                ),
            )
    }
}
#[automatically_derived]
impl ::std::error::Error for MyError {
    fn source(&self) -> ::core::option::Option<&(dyn ::std::error::Error + 'static)> {
        self.inner.source()
    }
}
#[automatically_derived]
impl ::ohno::Enrichable for MyError {
    fn add_enrichment(&mut self, entry: ::ohno::EnrichmentEntry) {
        ::ohno::Enrichable::add_enrichment(&mut self.inner, entry);
    }
}
#[automatically_derived]
impl ::ohno::ErrorExt for MyError {
    fn message(&self) -> ::std::string::String {
        self.inner
            .format_message(
                "MyError",
                ::core::option::Option::Some(
                    ::std::borrow::Cow::from(
                        ::std::format!("failed for {}", & (self.path)),
                    ),
                ),
            )
    }
    fn backtrace(&self) -> &::std::backtrace::Backtrace {
        self.inner.backtrace()
    }
}
impl ::core::fmt::Debug for MyError {
    fn fmt(&self, f: &mut ::core::fmt::Formatter<'_>) -> ::core::fmt::Result {
        f.debug_struct("MyError")
            .field("path", &self.path)
            .field("inner", &self.inner)
            .finish()
    }
}
#[automatically_derived]
impl MyError {
    /// Creates the error with no source.
    #[allow(
        dead_code,
        reason = "generated for every error type, used at the author's discretion"
    )]
    pub(crate) fn new(path: impl ::core::convert::Into<String>) -> Self {
        Self {
            path: path.into(),
            inner: ::ohno::OhnoCore::default(),
        }
    }
    /// Creates the error wrapping `error` as its source.
    #[allow(
        dead_code,
        reason = "generated for every error type, used at the author's discretion"
    )]
    pub(crate) fn caused_by(
        path: impl ::core::convert::Into<String>,
        error: impl ::core::convert::Into<
            ::std::boxed::Box<
                dyn ::std::error::Error + ::core::marker::Send + ::core::marker::Sync,
            >,
        >,
    ) -> Self {
        Self {
            path: path.into(),
            inner: ::ohno::OhnoCore::from(error),
        }
    }
}
#[automatically_derived]
impl ::core::convert::From<::core::convert::Infallible> for MyError {
    fn from(_value: ::core::convert::Infallible) -> Self {
        ::core::unreachable!("Infallible cannot be constructed")
    }
}
