crates/ohno_macros_impl/src/derive_error/generate/snapshots/ohno_macros_impl__derive_error__generate__tests__conversions_initialize_every_non_core_field.snap
---
source: crates/ohno_macros_impl/src/derive_error/generate/mod/tests.rs
expression: rendered(&model)
---
#[automatically_derived]
impl ::core::fmt::Display for MyError {
    fn fmt(&self, f: &mut ::core::fmt::Formatter<'_>) -> ::core::fmt::Result {
        self.inner.format_error(f, "MyError", ::core::option::Option::None)
    }
}
#[automatically_derived]
impl ::std::error::Error for MyError {
    fn source(&self) -> ::core::option::Option<&(dyn ::std::error::Error + 'static)> {
        self.inner.source()
    }
}
#[automatically_derived]
impl ::ohno::Enrichable for MyError {
    fn add_enrichment(&mut self, entry: ::ohno::EnrichmentEntry) {
        ::ohno::Enrichable::add_enrichment(&mut self.inner, entry);
    }
}
#[automatically_derived]
impl ::ohno::ErrorExt for MyError {
    fn message(&self) -> ::std::string::String {
        self.inner.format_message("MyError", ::core::option::Option::None)
    }
    fn backtrace(&self) -> &::std::backtrace::Backtrace {
        self.inner.backtrace()
    }
}
impl ::core::fmt::Debug for MyError {
    fn fmt(&self, f: &mut ::core::fmt::Formatter<'_>) -> ::core::fmt::Result {
        f.debug_struct("MyError")
            .field("kind", &self.kind)
            .field("inner", &self.inner)
            .finish()
    }
}
#[automatically_derived]
impl MyError {
    /// Creates the error with no source.
    #[allow(
        dead_code,
        reason = "generated for every error type, used at the author's discretion"
    )]
    pub(crate) fn new(kind: impl ::core::convert::Into<String>) -> Self {
        Self {
            kind: kind.into(),
            inner: ::ohno::OhnoCore::default(),
        }
    }
    /// Creates the error wrapping `error` as its source.
    #[allow(
        dead_code,
        reason = "generated for every error type, used at the author's discretion"
    )]
    pub(crate) fn caused_by(
        kind: impl ::core::convert::Into<String>,
        error: impl ::core::convert::Into<
            ::std::boxed::Box<
                dyn ::std::error::Error + ::core::marker::Send + ::core::marker::Sync,
            >,
        >,
    ) -> Self {
        Self {
            kind: kind.into(),
            inner: ::ohno::OhnoCore::from(error),
        }
    }
}
#[automatically_derived]
impl ::core::convert::From<std::io::Error> for MyError {
    fn from(error: std::io::Error) -> Self {
        let __ohno_fields = (error.kind(),);
        Self {
            kind: __ohno_fields.0,
            inner: ::ohno::OhnoCore::from(error),
        }
    }
}
#[automatically_derived]
impl ::core::convert::From<std::fmt::Error> for MyError {
    fn from(error: std::fmt::Error) -> Self {
        let __ohno_fields = (::core::default::Default::default(),);
        Self {
            kind: __ohno_fields.0,
            inner: ::ohno::OhnoCore::from(error),
        }
    }
}
#[automatically_derived]
impl ::core::convert::From<::core::convert::Infallible> for MyError {
    fn from(_value: ::core::convert::Infallible) -> Self {
        ::core::unreachable!("Infallible cannot be constructed")
    }
}
