crates/ohno_macros_impl/src/derive_error/generate/snapshots/ohno_macros_impl__derive_error__generate__tests__generics_thread_through_every_impl.snap
---
source: crates/ohno_macros_impl/src/derive_error/generate/mod/tests.rs
expression: rendered(&model)
---
#[automatically_derived]
impl<'a, T: Clone> ::core::fmt::Display for MyError<'a, T>
where
    T: Send,
{
    fn fmt(&self, f: &mut ::core::fmt::Formatter<'_>) -> ::core::fmt::Result {
        self.inner.format_error(f, "MyError", ::core::option::Option::None)
    }
}
#[automatically_derived]
impl<'a, T: Clone> ::std::error::Error for MyError<'a, T>
where
    T: Send,
{
    fn source(&self) -> ::core::option::Option<&(dyn ::std::error::Error + 'static)> {
        self.inner.source()
    }
}
#[automatically_derived]
impl<'a, T: Clone> ::ohno::Enrichable for MyError<'a, T>
where
    T: Send,
{
    fn add_enrichment(&mut self, entry: ::ohno::EnrichmentEntry) {
        ::ohno::Enrichable::add_enrichment(&mut self.inner, entry);
    }
}
#[automatically_derived]
impl<'a, T: Clone> ::ohno::ErrorExt for MyError<'a, T>
where
    T: Send,
{
    fn message(&self) -> ::std::string::String {
        self.inner.format_message("MyError", ::core::option::Option::None)
    }
    fn backtrace(&self) -> &::std::backtrace::Backtrace {
        self.inner.backtrace()
    }
}
impl<'a, T: Clone> ::core::fmt::Debug for MyError<'a, T>
where
    T: Send,
{
    fn fmt(&self, f: &mut ::core::fmt::Formatter<'_>) -> ::core::fmt::Result {
        f.debug_struct("MyError")
            .field("path", &self.path)
            .field("inner", &self.inner)
            .finish()
    }
}
#[automatically_derived]
impl<'a, T: Clone> MyError<'a, T>
where
    T: Send,
{
    /// Creates the error with no source.
    #[allow(
        dead_code,
        reason = "generated for every error type, used at the author's discretion"
    )]
    pub(crate) fn new(path: impl ::core::convert::Into<String>) -> Self {
        Self {
            path: path.into(),
            inner: ::ohno::OhnoCore::default(),
        }
    }
    /// Creates the error wrapping `error` as its source.
    #[allow(
        dead_code,
        reason = "generated for every error type, used at the author's discretion"
    )]
    pub(crate) fn caused_by(
        path: impl ::core::convert::Into<String>,
        error: impl ::core::convert::Into<
            ::std::boxed::Box<
                dyn ::std::error::Error + ::core::marker::Send + ::core::marker::Sync,
            >,
        >,
    ) -> Self {
        Self {
            path: path.into(),
            inner: ::ohno::OhnoCore::from(error),
        }
    }
}
#[automatically_derived]
impl<'a, T: Clone> ::core::convert::From<::core::convert::Infallible> for MyError<'a, T>
where
    T: Send,
{
    fn from(_value: ::core::convert::Infallible) -> Self {
        ::core::unreachable!("Infallible cannot be constructed")
    }
}
